--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@vue/test-utils": "1.0.0-beta.31",
     "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
+    "chromedriver": "^80.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "nightwatch": "^1.3.4",
+    "selenium-server": "^3.141.59",
     "typescript": "~3.7.5",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.3"
