--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+chromedriver.log*
 
 # Editor directories and files
 .idea
@@ -21,3 +22,4 @@ yarn-error.log*
 *.sw?
 
 coverage
+tests_output
