--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
+    "@babel/compat-data": "^7.9.0",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
